--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "ArticleTagsProject",
+   "name": "articles-tags-project",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
