--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
    "devDependencies": {
       "@types/node": "^8.0.29",
       "ts-node": "^3.3.0",
+      "typeorm": "^0.2.0-alpha.46",
       "typescript": "2.5.2"
    },
    "dependencies": {
-      "typeorm": "0.2.0",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^3.1.10"
    },
